created images folder in build directory

--- a/channel.html
+++ b/channel.html
@@ -13,39 +13,39 @@
 <body>
 	<header class="header header-channel">
 		<div class="menu">
-			<img src="src/images/burger.png">
+			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="src/images/ybutton.png">
-			<img class="logo-youtube" src="src/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png">
+			<img class="logo-youtube" src="build/images/Youtube.png">
 			<span class="mobile-title">Margaret Phelps</span>	
 		</div>	
 		<div class="mobile-nav">
 			<div class="mobile-nav__item">
-				<img src="src/images/search-mobile.png">
+				<img src="build/images/search-mobile.png">
 			</div>
 			<div class="mobile-nav__item">
-				<img src="src/images/menu-mobile.png">
+				<img src="build/images/menu-mobile.png">
 			</div>
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="src/images/search.png">
+			<img class="search-icon" src="build/images/search.png">
 		</div>
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="src/images/camera.png">
+				<img src="build/images/camera.png">
 			</div>
 			<div class="top-navigation__item">
-				<img src="src/images/dots.png">
+				<img src="build/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="src/images/bell.png">
+				<img src="build/images/bell.png">
 			</div>
 		</div>
 		<div class="top-userpic">
-			<img src="src/images/Userpic.png">
+			<img src="build/images/Userpic.png">
 		</div>
 	</header>
 	<section class="main">
@@ -53,91 +53,91 @@
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
-						<img class="categories-item__image" src="src/images/sidebar/home.png">
+						<img class="categories-item__image" src="build/images/sidebar/home.png">
 						<p class="categories-item__text">Home</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/trending.png">
+						<img class="categories-item__image" src="build/images/sidebar/trending.png">
 						<p class="categories-item__text">Trending</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/sidebar/subscriptions.png">
+						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png">
 						<p class="categories-item__text">Subscriptions</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/library.png">
+						<img class="categories-item__image" src="build/images/sidebar/library.png">
 						<p class="categories-item__text">Library</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/history.png">
+						<img class="categories-item__image" src="build/images/sidebar/history.png">
 						<p class="categories-item__text">History</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/watchlater.png">
+						<img class="categories-item__image" src="build/images/sidebar/watchlater.png">
 						<p class="categories-item__text">Watch later</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/favourite.png">
+						<img class="categories-item__image" src="build/images/sidebar/favourite.png">
 						<p class="categories-item__text">Favourites</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/liked.png">
+						<img class="categories-item__image" src="build/images/sidebar/liked.png">
 						<p class="categories-item__text">Liked videos</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/music.png">
+						<img class="categories-item__image" src="build/images/sidebar/music.png">
 						<p class="categories-item__text">Music</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/games.png">
+						<img class="categories-item__image" src="build/images/sidebar/games.png">
 						<p class="categories-item__text">Games</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/sidebar/chevron-down.png">
+						<img class="categories-item__image" src="build/images/sidebar/chevron-down.png">
 						<p class="categories-item__text">Show more</p>
 					</div>																		
 				</div>
 				<div class="sidebar__subscriptions subscriptions">
 					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-1.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-2.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-3.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-4.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-5.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-6.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
 				</div>									
 			</div>
 			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="src/images/sidebar/settings.png">
+				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
 		<div class="content content_full">
 			<div class="content-top">
-				<img class="content-top__image" src="src/images/channel-bg.png">
+				<img class="content-top__image" src="build/images/channel-bg.png">
 			</div>
 			<div class="content__header content-header">
 				<div class="content-header__info content-info">
 					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="src/images/profile.png">
+						<img class="info-userpic__image" src="build/images/profile.png">
 					</div>
 					<div class="content-info__description info-description">
 						<h6 class="info-description__title">Margaret Phelps</h6>
@@ -145,7 +145,7 @@
 					</div>
 				</div>
 				<div class="content-header__subscribe content-subscribe">
-					<img class="content-subscribe__icon" src="src/images/bell.png">
+					<img class="content-subscribe__icon" src="build/images/bell.png">
 					<a class="button-regular">Subscribe 2.3m</a>
 				</div>
 			</div>
@@ -155,15 +155,15 @@
 						<li class="content-navigation__item nav-item nav-item_active"><a class="nav-item__link" href="home.html">Home</a></li>
 						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="video.html">Videos</a></li>
 						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Playlists</a></li>
-						<li class="content-navigation__item nav-item nav-item_more"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/rightArrow.png"></a></li>						
+						<li class="content-navigation__item nav-item nav-item_more"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/rightArrow.png"></a></li>						
 						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Channels</a></li>
 						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Discussion</a></li>
 						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">About</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/search.png"></a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/search.png"></a></li>
 					</ul>
 					<div class="content-player player">
 						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="src/images/channel-video.png">
+							<img class="player-image__pic" src="build/images/channel-video.png">
 							<span class="player-image__time"></span>
 						</div>
 						<div class="content-player__description player-description">
@@ -176,15 +176,15 @@
 				<div class="content-main__recommended recommended">
 					<h6 class="recommended__title">Recommended channels</h6>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-1.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-1.png">
 						<p class="recommended-item__name">Flora Benson</p>
 					</div>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-2.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-2.png">
 						<p class="recommended-item__name">Violet Cobb</p>
 					</div>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-3.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-3.png">
 						<p class="recommended-item__name">Philip Mulins</p>
 					</div>										
 				</div>
@@ -196,15 +196,15 @@
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
-							<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
-							<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
 						</div>						
 					</div>
 				</div>
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-1.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-1.png">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -218,7 +218,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-2.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-2.png">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -232,7 +232,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-3.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-3.png">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -246,7 +246,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-4.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-4.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -260,7 +260,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-5.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-5.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -274,7 +274,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-6.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-6.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
