--- a/home.html
+++ b/home.html
@@ -13,36 +13,36 @@
 <body>
 	<header class="header header-home">
 		<div class="menu">
-			<img src="src/images/burger.png">
+			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="src/images/ybutton.png">
-			<img class="logo-youtube" src="src/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png">
+			<img class="logo-youtube" src="build/images/Youtube.png">
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="src/images/search.png">
+			<img class="search-icon" src="build/images/search.png">
 		</div>
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="src/images/camera.png">
+				<img src="build/images/camera.png">
 			</div>
 			<div class="top-navigation__item">
-				<img src="src/images/dots.png">
+				<img src="build/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="src/images/bell.png">
+				<img src="build/images/bell.png">
 			</div>
 		</div>
 		<div class="header_right">
 			<div class="mobile-nav">
 				<div class="mobile-nav__item">
-					<img src="src/images/search-mobile.png">
+					<img src="build/images/search-mobile.png">
 				</div>
 			</div>				
 			<div class="top-userpic">
-				<img src="src/images/Userpic.png">			
+				<img src="build/images/Userpic.png">			
 			</div>
 		</div>
 	</header>
@@ -51,80 +51,80 @@
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
-						<img class="categories-item__image" src="src/images/sidebar/home.png">
+						<img class="categories-item__image" src="build/images/sidebar/home.png">
 						<p class="categories-item__text">Home</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/trending.png">
+						<img class="categories-item__image" src="build/images/sidebar/trending.png">
 						<p class="categories-item__text">Trending</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/sidebar/subscriptions.png">
+						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png">
 						<p class="categories-item__text">Subscriptions</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/library.png">
+						<img class="categories-item__image" src="build/images/sidebar/library.png">
 						<p class="categories-item__text">Library</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/history.png">
+						<img class="categories-item__image" src="build/images/sidebar/history.png">
 						<p class="categories-item__text">History</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/watchlater.png">
+						<img class="categories-item__image" src="build/images/sidebar/watchlater.png">
 						<p class="categories-item__text">Watch later</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/favourite.png">
+						<img class="categories-item__image" src="build/images/sidebar/favourite.png">
 						<p class="categories-item__text">Favourites</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/liked.png">
+						<img class="categories-item__image" src="build/images/sidebar/liked.png">
 						<p class="categories-item__text">Liked videos</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/music.png">
+						<img class="categories-item__image" src="build/images/sidebar/music.png">
 						<p class="categories-item__text">Music</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/sidebar/games.png">
+						<img class="categories-item__image" src="build/images/sidebar/games.png">
 						<p class="categories-item__text">Games</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/sidebar/chevron-down.png">
+						<img class="categories-item__image" src="build/images/sidebar/chevron-down.png">
 						<p class="categories-item__text">Show more</p>
 					</div>																		
 				</div>
 				<div class="sidebar__subscriptions subscriptions">
 					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-1.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-2.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-3.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-4.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-5.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/sidebar/small-6.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
 				</div>									
 			</div>
 			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="src/images/sidebar/settings.png">
+				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
@@ -132,20 +132,20 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image" src="src/images/header-profile.png">
+						<img class="gallery-header__image" src="build/images/header-profile.png">
 						<h4 class="gallery-header__title">Dollie Blair</h4>					
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
-							<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
-							<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
 						</div>						
 					</div>
 				</div>
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-1.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-1.png">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -159,7 +159,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-2.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-2.png">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -173,7 +173,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-3.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-3.png">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -187,7 +187,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-4.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-4.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -201,7 +201,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-5.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-5.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -215,7 +215,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-6.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-6.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -233,14 +233,14 @@
 				<div class="gallery-header">
 					<h4 class="gallery-header__title">Recommended</h4>
 					<div class="gallery-navigation">
-						<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
-						<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+						<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
+						<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
 					</div>
 				</div>
 				<div class="gallery-medium__wrapper">
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="src/images/medium-1.png">
+							<img class="gallery-medium__image" src="build/images/medium-1.png">
 							<span class="gallery-medium__duration">3.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -256,7 +256,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="src/images/medium-2.png">
+							<img class="gallery-medium__image" src="build/images/medium-2.png">
 							<span class="gallery-medium__duration">2.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -272,7 +272,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="src/images/medium-3.png">
+							<img class="gallery-medium__image" src="build/images/medium-3.png">
 							<span class="gallery-medium__duration">2.12</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -291,22 +291,22 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image gallery-img_small" src="src/images/videoplayer-img.png">
+						<img class="gallery-header__image gallery-img_small" src="build/images/videoplayer-img.png">
 						<h4 class="gallery-header__title">Food & drink</h4>
 						<p class="gallery-header__text">Recommended channel for you</p>						
 					</div>
 					<div class="gallery-header_right">
 						<a class="button-regular">Subscribe 2.3m</a>
 						<div class="gallery-navigation">
-							<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
-							<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
 						</div>						
 					</div>
 				</div>
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-12.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-12.png">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -320,7 +320,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-11.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-11.png">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -334,7 +334,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-10.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-10.png">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -348,7 +348,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-9.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-9.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -362,7 +362,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-8.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-8.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -376,7 +376,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/slider/slider-7.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-7.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
