--- a/video.html
+++ b/video.html
@@ -13,44 +13,44 @@
 <body>
 	<header class="header header-video">
 		<div class="menu">
-			<img src="src/images/burger.png">
+			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="src/images/ybutton.png">
-			<img class="logo-youtube" src="src/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png">
+			<img class="logo-youtube" src="build/images/Youtube.png">
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="src/images/search.png">
+			<img class="search-icon" src="build/images/search.png">
 		</div>
 		<div class="mobile-nav">
 			<div class="mobile-nav__item">
-				<img src="src/images/search-mobile.png">
+				<img src="build/images/search-mobile.png">
 			</div>
 			<div class="mobile-nav__item">
-				<img src="src/images/menu-mobile.png">
+				<img src="build/images/menu-mobile.png">
 			</div>
 		</div>		
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="src/images/camera.png">
+				<img src="build/images/camera.png">
 			</div>
 			<div class="top-navigation__item">
-				<img src="src/images/dots.png">
+				<img src="build/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="src/images/bell.png">
+				<img src="build/images/bell.png">
 			</div>
 		</div>
 		<div class="top-userpic">
-			<img src="src/images/Userpic.png">
+			<img src="build/images/Userpic.png">
 		</div>
 	</header>
 	<section class="videoplayer">
 		<div class="videoplayer__main videoplayer-main">
 			<div class="videoplayer-main__image videoplayer-img">
-				<img class="videoplayer-img__item" src="src/images/player.png">
+				<img class="videoplayer-img__item" src="build/images/player.png">
 				<div class="videoplayer__navigation videoplayer-navigation">
 					<div class="videoplayer-navigation__time videoplayer-time">
 						<span class="videoplayer-time__item"> 
@@ -63,42 +63,42 @@
 					<div class="videoplayer-navigation__progress videoplayer-progress">
 						<div class="videoplayer-progress_left">
 							<div class="videoplayer-progress__control">
-								<img src="src/images/player/Pause small.png">
+								<img src="build/images/player/Pause small.png">
 							</div>
 							<span class="videoplayer-progress__time">1.34</span>
 						</div>
-						<img src="src/images/player/Progress Bar.png" class="videoplayer-progress__image">
+						<img src="build/images/player/Progress Bar.png" class="videoplayer-progress__image">
 						<div class="videoplayer-progress_right">
 							<span class="videoplayer-progress__time">19.00</span>
 							<div class="videoplayer-progress__control">
-								<img src="src/images/player/Volume small.png">
+								<img src="build/images/player/Volume small.png">
 							</div>
 						</div>
 					</div>
 					<div class="videoplayer-navigation__controls videoplayer-controls">
 						<div class="videoplayer-controls_left">
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Pause.png">
+								<img src="build/images/player/Pause.png">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Next.png">
+								<img src="build/images/player/Next.png">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Volume.png">
+								<img src="build/images/player/Volume.png">
 							</div>										
 						</div>
 						<div class="videoplayer-controls_right">
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Subtitles.png">
+								<img src="build/images/player/Subtitles.png">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Settings.png">
+								<img src="build/images/player/Settings.png">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Size.png">
+								<img src="build/images/player/Size.png">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="src/images/player/Full Screen.png">
+								<img src="build/images/player/Full Screen.png">
 							</div>															
 						</div>
 					</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="videoplayer-info">
 				<div class="videoplayer-info__more">
-					<img src="src/images/RightArrow.png">
+					<img src="build/images/RightArrow.png">
 				</div>
 				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
 				<div class="videoplayer-navigation">
@@ -114,20 +114,20 @@
 					<div class="videoplayer-navigation__wrapper">
 						<div class="videoplayer-navigation__buttons videoplayer-buttons">
 							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/thumb-up.png">
+								<img class="video-button__icon" src="build/images/thumb-up.png">
 								<span class="video-button__text">123k</span>
 							</a>
 							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/thumb-down.png">
+								<img class="video-button__icon" src="build/images/thumb-down.png">
 								<span class="video-button__text">435k</span>
 							</a>
 							<a class="videoplayer-buttons__item video-button" href="">
-								<img class="video-button__icon" src="src/images/share.png">
+								<img class="video-button__icon" src="build/images/share.png">
 								<span class="video-button__text">Share</span>
 							</a>												
 						</div>
 						<a class="videoplayer-more" href="">
-							<img src="src/images/more.png">
+							<img src="build/images/more.png">
 						</a>						
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 			<div class="videoplayer-summary">
 				<div class="videoplayer-description">
 					<div class="videoplayer-description__thumbnail">
-						<img class="videoplayer-description__image" src="src/images/videoplayer-img.png">
+						<img class="videoplayer-description__image" src="build/images/videoplayer-img.png">
 					</div>
 					<div class="videoplayer-description__text">
 						<h5 class="videoplayer-description__category">Food & Drink</h5>
@@ -161,7 +161,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-1.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-1.png">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -171,7 +171,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-2.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-2.png">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -181,7 +181,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-3.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-3.png">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -191,7 +191,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="src/images/video/playlist-4.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-4.png">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
